[gd_scene load_steps=4 format=3 uid="uid://b2accwiykec1o"]

[ext_resource type="Script" path="res://Scenes/pause menu/paused_menu.gd" id="1_jm0ka"]
[ext_resource type="AudioStream" uid="uid://vd8npopxa8a5" path="res://audio/Monkeys-Spinning-Monkeys(chosic.com).mp3" id="2_0j4qu"]
[ext_resource type="FontFile" uid="uid://c76krp3u68v8j" path="res://Fonts/Cyberfall Italic.otf" id="3_b275k"]

[node name="PausedMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm0ka")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.286275)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -91.0
offset_right = 63.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 13

[node name="Label" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Paused"

[node name="ResumeButton" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Resume game"

[node name="SettingsButton" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitMenuButton" type="Button" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="ColorRect/GridContainer"]
process_mode = 3
layout_mode = 2
text = "Quit to desktop"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0j4qu")

[node name="IpLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 346.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("3_b275k")
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="ColorRect/GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/QuitMenuButton" to="." method="_on_quit_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
